fix text alignment and image headers on mobile

--- a/resources/scss/_opux_layouts.scss
+++ b/resources/scss/_opux_layouts.scss
@@ -99,6 +99,8 @@
     background-size: cover;
     display: block;
     height: 550px;
+    min-height: 0px;
+    padding: 0;
     position: relative;
 
     iframe {
